k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-vsrlat
  namespace: default
  labels:
    app: site-vsrlat
spec:
  type: ClusterIP
  selector:
    app: site-vsrlat
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
