k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-vsrlat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - profile.vsrl.lat
    secretName: profile-vsrl-tls
  rules:
  - host: profile.vsrl.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site-vsrlat
            port:
              number: 80
